  method can now return column or row sums.
* Added a new context dependent model class. The conditional nucleotide
  frequency weighted class has been demonstrated to be superior to the model
  forms of Goldman and Yang (1994) and Muse and Gaut (1994). The publication
  supporting this claim is In press at Mol Biol Evol, authored by Yap,
  Lindsay, Easteal and Huttley.

Changes
-------

* cogent.format.table.asReportlabTable is being discontinued in version 1.5.
  This is the last dependency on reportlab and removal will simplify
  installation.

Bug Fixes
---------

Cogent 1.2 - 1.3
================

New Features
------------

* Python2.6 is now supported
* added cogent.cluster.nmds, code to perform nonmetric multidimensional
  scaling.  Not as fast as others (e.g.: R, MASS package, isoMDS)
* Documentation ported to using the Sphinx documentation generator.
* Major additions to documentation in doc/examples.
* Added partial support for querying the Ensembl MySQL databases. This
  capacity has additional dependencies (MySQL-python and SQLAlchemy). This
  module should be considered alpha level code, (although it has worked
  reliably for some time in the hands of the developers).
* Introduced a new substitution model family. This family has the same form as
  that originally described by Muse and Gaut (Mol Biol Evol, 11, 715-24).
  These models were applied in the article by Lindsay et al. (2008, Biol
  Direct, 3, 52). Model state defaults to the tuple weighted matrix (eg. the
  Goldman and Yang codon models). Selecting the nucleotide weighted matrix is
  done using the mprob_model argument.
* Likelihood functions now have a getStatistics method. This returns cogent
  Table objects. Optional arguments are with_motif_probs and with_titles where
  the latter refers to the Table.Title attribute being set.
* Added rna_struct formatter and rna_plot parser
* A fast unifrac method implementation.
* Added new methods on tree related objects: TreeNode.getNodesDict;